[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=1]
[ext_resource path="res://cookie-gfbdf06c25_640.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GameScene.gd" type="Script" id=3]
[ext_resource path="res://oie_8206298xLoBPu1.png" type="Texture" id=4]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="PerSec" type="Label" parent="."]
margin_top = 960.0
margin_right = 1920.0
margin_bottom = 1060.0
custom_fonts/font = ExtResource( 1 )
text = " per sec: 1"

[node name="PerClick" type="Label" parent="."]
margin_top = 960.0
margin_right = 1920.0
margin_bottom = 1060.0
custom_fonts/font = ExtResource( 1 )
text = "per click: 1 "
align = 2

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 89.0
margin_top = 139.0
margin_right = 729.0
margin_bottom = 769.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )

[node name="Points" type="Label" parent="."]
margin_left = 891.0
margin_top = 50.0
margin_right = 1840.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 1 )
text = "Points: 0"
align = 2

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0

[node name="PC1" type="Button" parent="."]
margin_left = 676.0
margin_top = 224.0
margin_right = 1787.0
margin_bottom = 265.0
custom_fonts/font = ExtResource( 1 )
text = "czekoladka - 1PC - 2"
flat = true
align = 2
icon_align = 1

[node name="PS1" type="Button" parent="."]
margin_left = 686.0
margin_top = 320.0
margin_right = 1787.0
margin_bottom = 361.0
custom_fonts/font = ExtResource( 1 )
text = "cukiernik - 1PS - 5"
flat = true
align = 2
icon_align = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="PC1" to="." method="_on_1PC_pressed"]
[connection signal="pressed" from="PS1" to="." method="_on_1PS_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
